Atulizações fim do dia 29.05

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,3 +107,43 @@ nav ul{
     margin-bottom: 40px;
 }
 
+.card{
+    padding: 15px;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.2);  
+}
+
+
+* {
+    box-sizing: border-box;
+}
+
+.container {
+  width: 100%;
+  background-color: #ddd;
+  padding: 0;
+ 
+}
+
+.skills {
+  text-align: right;
+  padding: 5px;
+  color: white;
+ 
+}
+
+
+
+.html {width: 90%; background-color: #4CAF50;}
+.css {width: 80%; background-color: #2196F3;}
+.js {width: 70%; background-color: #f44336;}
+.java {width: 80%; background-color: #808080;}
+
+.comunicacao {width: 90%; background-color: #4CAF50;}
+.proatividade {width: 85%; background-color: #2196F3;}
+.lideranca {width: 80%; background-color: #f44336;}
+.equipe {width: 95%; background-color: #808080;}
+
+h5{
+    padding-top: 15px;
+ 
+}
